# docs/swagger.yaml
@@ -35,6 +35,17 @@ definitions:
         example: 200
         type: integer
     type: object
+  event.Event:
+    properties:
+      content:
+        type: string
+      password:
+        type: string
+      time:
+        type: string
+      user:
+        type: string
+    type: object
   user.ChangePasswordRequest:
     properties:
       nickname:
@@ -88,6 +99,58 @@ definitions:
 info:
   contact: {}
 paths:
+  /events:
+    get:
+      consumes:
+      - application/json
+      description: 이벤트를 조회합니다.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/custom.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/custom.Fail400GetResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/custom.Fail500GetResponse'
+      summary: 이벤트 조회
+      tags:
+      - Events
+    post:
+      consumes:
+      - application/json
+      description: 이벤트를 생성합니다.
+      parameters:
+      - description: 이벤트 생성 요청 객체
+        in: body
+        name: event
+        required: true
+        schema:
+          $ref: '#/definitions/event.Event'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/custom.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/custom.Fail400GetResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/custom.Fail500GetResponse'
+      summary: 이벤트 생성
+      tags:
+      - Events
   /users:
     post:
       consumes:
